<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/aliasEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alias"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/privacyUrlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/privacy_url"
        android:inputType="textUri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="25dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/button_red" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/button_green" />
    </LinearLayout>

</LinearLayout>
